--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.10",
+    "firebase": "^5.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.10",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
